# bash

./: .gitignore  LICENSE  README.md  TESTING.md  claude.md  claude_desktop_config.example.json  install.sh  mcp-bash-wrapper.js  package.json  pyproject.toml  tailscale-connection-investigation.md  verify.sh
.archive/: agents.md
src/mcp_bash_server/: __init__.py  server.py  session_manager.py
